// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > DeepProps Matches snapshot when array prop "users" has one item: "[object Object]": when array prop "users" has one item: "[object Object]" 1`] = `
<div>
  <div
    key="jest-auto-snapshots String Fixture"
  >
    <h1>
      jest-auto-snapshots String Fixture
       
      jest-auto-snapshots String Fixture
    </h1>
    <div
      key="1"
    >
      <h2>
        1
      </h2>
      <span>
        $
        jest-auto-snapshots String Fixture
      </span>
    </div>
  </div>
  <span>
    jest-auto-snapshots String Fixture
  </span>
</div>
`;

exports[`jest-auto-snapshots > DeepProps Matches snapshot when array prop "users" is an empty array: "[]": when array prop "users" is an empty array: "[]" 1`] = `
<div>
  <span>
    jest-auto-snapshots String Fixture
  </span>
</div>
`;

exports[`jest-auto-snapshots > DeepProps Matches snapshot when passed all props: when passed all props 1`] = `
<div>
  <div
    key="jest-auto-snapshots String Fixture"
  >
    <h1>
      jest-auto-snapshots String Fixture
       
      jest-auto-snapshots String Fixture
    </h1>
    <div
      key="1"
    >
      <h2>
        1
      </h2>
      <span>
        $
        jest-auto-snapshots String Fixture
      </span>
    </div>
  </div>
  <span>
    jest-auto-snapshots String Fixture
  </span>
</div>
`;

exports[`jest-auto-snapshots > DeepProps Matches snapshot when passed only required props: when passed only required props 1`] = `
<div>
  <div
    key="jest-auto-snapshots String Fixture"
  >
    <h1>
      jest-auto-snapshots String Fixture
       
      jest-auto-snapshots String Fixture
    </h1>
    <div
      key="1"
    >
      <h2>
        1
      </h2>
      <span>
        $
        jest-auto-snapshots String Fixture
      </span>
    </div>
  </div>
  <span />
</div>
`;
